# iden

./: Cargo.toml  LICENSE  README.md  README_working_draft.md  basenet  basenet.py  install.sh  quickstart.md
src/: basenet.rs  id.rs  main.rs  mproc.rs  padman.rs  push.sh  start  start.sh  stop  tcp.rs  util.rs
src/.iden/: iden.cfg  shard.map
